解决测试用例异常问题